--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,48 +20,22 @@ default:
     - java -version
     - bundle install
 
-#versioning-dev:
-#  stage: development
-#  script:
-#    - bundle exec fastlane tag_commit_if_needed
-#  only:
-#    refs:
-#      - /^feature.*$/
-#      - /^feat.*$/
-#      - development
-#
-#versioning-prod:
-#  stage: production
-#  script:
-#    - bundle exec fastlane tag_commit_if_needed
-#  only:
-#    refs:
-#      - main
-
 deploy to development:
   stage: development
   script:
     - echo "Starting the Android build"
-    - bundle install
     - bundle exec fastlane distribute
-  only:
-    refs:
-      - /^feature.*$/
-      - /^feat.*$/
-      - development
-      - tags
-    variables:
-      - $CI_COMMIT_TAG =~ /^v-.*/
+  rules:
+    - if: '$CI_COMMIT_REF_NAME =~ /^(feature|feat)/ || $CI_COMMIT_REF_NAME == "development"'
+      when: always
+    - if: '$CI_COMMIT_TAG =~ /^v-/'
+      when: always
 
 deploy to production:
   stage: production
   script:
     - echo "Starting the Android build"
-    - bundle install
     - bundle exec fastlane distribute
-
-  only:
-    only:
-      - main
-    variables:
-      - $CI_COMMIT_TAG =~ /^v-.*/
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == "main" && $CI_COMMIT_TAG =~ /^v-/'
+      when: always
