--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ before_script:
   - apt-get update -qq && apt-get install -y -qq ruby-full unzip
   - gem install bundler
   - bundle install
+  - echo "Secure Files Path= $CI_SECURE_FILES"
+  - ls -la "$CI_SECURE_FILES"
 
 deploy-to-development:
   stage: development
@@ -39,5 +41,5 @@ deploy-to-production:
   rules:
     - if: '$CI_COMMIT_REF_NAME == "main" && $CI_COMMIT_TAG =~ /^v-prod-/'
 
-after_script:
-  - rm -f ${SECURE_FILE_NAME}
+#after_script:
+#  - rm -f ${SECURE_FILE_NAME}
