--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,10 @@ stages:
   - production
 
 variables:
-  SECURE_FILE_NAME: "google-service-secrets.json"
+  ENCODED_GOOGLE_SERVICES: ""
   JAVA_VERSION: "17"
   LC_ALL: "en_US.UTF-8"
   LANG: "en_US.UTF-8"
-  CI_DEBUG_TRACE: "true"
 
 image: cirrusci/android-sdk:33
 
@@ -15,17 +14,13 @@ before_script:
   - apt-get update -qq && apt-get install -y -qq ruby-full unzip
   - gem install bundler
   - bundle install
-  - echo "Secure Files Path= $CI_SECURE_FILES"
-  - ls -la "$CI_SECURE_FILES"
 
 deploy-to-development:
   stage: development
   script:
-    - echo "Checking Secure Files..."
-    - ls -la $CI_SECURE_FILES
-    - chmod 644 $CI_SECURE_FILES/google-service-secrets.json
-    - cp $CI_SECURE_FILES/${SECURE_FILE_NAME} ./
-    - chmod 644 ${SECURE_FILE_NAME}
+    - echo "Decoding google-services.json..."
+    - echo "$ENCODED_GOOGLE_SERVICES" | base64 --decode > google-services.json
+    - chmod 644 google-services.json
     - ls -la
     - bundle exec fastlane distribute_development
   rules:
@@ -35,11 +30,12 @@ deploy-to-development:
 deploy-to-production:
   stage: production
   script:
-    - cp $CI_SECURE_FILES/${SECURE_FILE_NAME} ./
-    - chmod 644 ${SECURE_FILE_NAME}
+    - echo "فك تشفير ملف google-services.json..."
+    - echo "$ENCODED_GOOGLE_SERVICES" | base64 --decode > google-services.json
+    - chmod 644 google-services.json
     - bundle exec fastlane distribute_production
   rules:
     - if: '$CI_COMMIT_REF_NAME == "main" && $CI_COMMIT_TAG =~ /^v-prod-/'
 
-#after_script:
-#  - rm -f ${SECURE_FILE_NAME}
+after_script:
+  - rm -f google-services.json
