--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ deploy-to-development:
     - echo "$ENCODED_GOOGLE_SERVICES" | base64 --decode > google-services.json
     - chmod 644 google-services.json
     - ls -la
-    - bundle exec fastlane distribute_development
+    - bundle exec fastlane distribute
   rules:
     - if: '$CI_COMMIT_REF_NAME == "development"'
     - if: '$CI_COMMIT_TAG =~ /^v-dev-/'
@@ -33,7 +33,7 @@ deploy-to-production:
     - echo "فك تشفير ملف google-services.json..."
     - echo "$ENCODED_GOOGLE_SERVICES" | base64 --decode > google-services.json
     - chmod 644 google-services.json
-    - bundle exec fastlane distribute_production
+    - bundle exec fastlane distribute
   rules:
     - if: '$CI_COMMIT_REF_NAME == "main" && $CI_COMMIT_TAG =~ /^v-prod-/'
 
