--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ before_script:
   - apt-get update -qq && apt-get install -y -qq ruby-full unzip
   - gem install bundler
   - bundle install
+  - chmod +x ./gradlew
+  - ls -la ./gradlew
 
 deploy-to-development:
   stage: development
