testCi:update ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,9 +22,9 @@ before_script:
 deploy-to-development:
   stage: development
   script:
-    - cat "ENCODED_GOOGLE_SERVICES =" ENCODED_GOOGLE_SERVICES
+    - echo "ENCODED_GOOGLE_SERVICES= ${ENCODED_GOOGLE_SERVICES:0:10}..."
     - echo "$ENCODED_GOOGLE_SERVICES" | base64 --decode > ENV['FIREBASE_CONDITIONALS_JSON']
-    - cat "FIREBASE_CONDITIONALS_JSON = =ENV['FIREBASE_CONDITIONALS_JSON']
+    - echo "FIREBASE_CONDITIONALS_JSON = =ENV['FIREBASE_CONDITIONALS_JSON']
     - chmod 644 ENV['FIREBASE_CONDITIONALS_JSON']
     - bundle exec fastlane distribute
   rules:
