--- a/fastlane/.env
+++ b/fastlane/.env
@@ -3,4 +3,4 @@ FIREBASE_GOOGLE_SERVICES_JSON=
 FIREBASE_CONDITIONALS_JSON=google-service-secrets.json
 APP_ID=1:1011258892198:android:cbbc87d231d398b111f967
 ORIGIN=
-GOOGLE_SERVICE_SECRETS=
+ENCODED_GOOGLE_SERVICES=
