--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ deploy-to-development:
   stage: development
   script:
     - echo "ENCODED_GOOGLE_SERVICES= ${ENCODED_GOOGLE_SERVICES:0:10}..."
-    - echo "$ENCODED_GOOGLE_SERVICES" | base64 --decode > ENV['FIREBASE_CONDITIONALS_JSON']
+    - echo "$ENCODED_GOOGLE_SERVICES" | base64 -d > google-service-secrets.json
     - echo "FIREBASE_CONDITIONALS_JSON =" ENV['FIREBASE_CONDITIONALS_JSON']
     - chmod 644 ENV['FIREBASE_CONDITIONALS_JSON']
     - bundle exec fastlane distribute
@@ -33,7 +33,7 @@ deploy-to-development:
 deploy-to-production:
   stage: production
   script:
-    - echo "$ENCODED_GOOGLE_SERVICES" | base64 --decode > ENV['FIREBASE_CONDITIONALS_JSON']
+    - echo "$ENCODED_GOOGLE_SERVICES" | base64 --decode > google-service-secrets.json
     - chmod 644 ENV['FIREBASE_CONDITIONALS_JSON']
     - bundle exec fastlane distribute
   rules:
